Modernize some code.